SK - add line for media queries to work - update blue for key - add file extensions

--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html >
+<html lang=en>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5"> <!-- so that media queries work->
   <title>SEP Beta Research Timeline</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
@@ -24,7 +25,7 @@
   <p><span style="background-color: #f5c44b">&nbsp;</span> Accessibility</p>
   <p><span style="background-color: #3ee9d1">&nbsp;</span> Other</p>
   <p><span style="background-color: #ce43eb">&nbsp;</span> Lab research</p>
-  <p><span style="background-color: #4d92eb">&nbsp;</span> Online research</p>
+  <p><span style="background-color: #0D5ec0">&nbsp;</span> Online research</p>
   <p><span style="background-color: #935300">&nbsp;</span> Partners collaboration - co-design</p>
 
 </div>
@@ -40,7 +41,6 @@
       </div>
       <div class="body">
        <ul class="in_card">
-        <h3></h3>
         <li>SEP Beta phase started on 18th of April 2019</li>
       </ul>
       </div>
@@ -58,7 +58,6 @@
   <div class="body">
         <strong>Focus</strong>
        <ul class="in_card">
-        <h3></h3>
         <li>- Support habits and opinion research</li>
         <li>- General layout benchmarking Usability Testing</li>
         <li>- Scored on Impressions, navigation, layout, information & general functionality</li>
@@ -75,7 +74,7 @@
         <li class="issue">- Issue: SUPPORT OPTIONS is not well undestood as a term</li>
         <li>- Eligibility and Costs need to be at top of page</li>
         <br>
-        <li><a href="../files/SEP_2019_MAY_8_USABILITY.pdf" target="_blank">May 8th Findings (PDF)</a></li>
+        <li><a href="../files/SEP_2019_MAY_8_USABILITY.pdf" target="_blank">May 8th Findings</a> (PDF)</li>
       </ul>
 
     <!-- <img src="http://placehold.it/1000x500" alt="Graphic"> -->
@@ -115,7 +114,7 @@
         <li class="issue">- Adddress lookup still has issues and needs to be improved</li>
         <li class="issue">- Search is not returning partial matches from incomplete strings (Scot should find Scottish)</li>
         <br>
-        <li><a href="../files/SEP_2019_may_22_usability.pdf" target="_blank">May 22nd Findings (PDF)</a></li>
+        <li><a href="../files/SEP_2019_may_22_usability.pdf" target="_blank">May 22nd Findings</a> (PDF)</li>
       </ul>
   </div>
 </div>
@@ -138,7 +137,7 @@
       <ul class="in_card">
         <br>
 
-        <li><a href="../files/SEP_2019_May_Ambition.pdf" target="_blank"> Team overview of SEP</a></li>
+        <li><a href="../files/SEP_2019_May_Ambition.pdf" target="_blank"> Team overview of SEP</a> (pdf)</li>
 
       </ul>
   </div>
@@ -165,7 +164,7 @@
       <ul class="in_card">
         <li>- Not overly technical fix's</li>
         <li>- Lots of core usability issues that are accentuated for A11Y audiences </li>
-        <br><li><a href="../files/SEP_2019_May_31_A11Y.pdf" target="_blank">May 2019 A11Y fix's</a></li>
+        <br><li><a href="../files/SEP_2019_May_31_A11Y.pdf" target="_blank">May 2019 A11Y fix's</a> (PDF)</li>
       </ul>
   </div>
 </div>
@@ -191,8 +190,8 @@
       <ul class="in_card">
         <li>- Not overly technical fix's</li>
         <li>- Lots of core usability issues that are accentuated for A11Y audiences </li>
-        <br><li><a href="../files/SEP_2019_may_31_A11Y_Sprint6.pdf" target="_blank">June 2019 A11Y fix list Sprint 6</a></li>
-        <br><li><a href="../files/SEP_2019_June_14_A11Y_Sprint7.pdf" target="_blank">June 2019 A11Y fix list Sprint 7</a></li>
+        <li>- <a href="../files/SEP_2019_may_31_A11Y_Sprint6.pdf" target="_blank">June 2019 A11Y fix list Sprint 6</a> (PDF)</li>
+        <li>- <a href="../files/SEP_2019_June_14_A11Y_Sprint7.pdf" target="_blank">June 2019 A11Y fix list Sprint 7</a> (PDF)</li>
       </ul>
   </div>
 </div>
@@ -308,7 +307,7 @@
         <li>- People expect to be able to search by both./either Post Code and Town</li>
         <li>- Milage options eed to cover a lot of distance and granularity to reflect the different sensibilities between central belt and more rural areas of Scotland</li>
         <li class="issue">The numbers change between Support & Events. Neither of these numbers matched with the number on the home page (because that is the sum of both of these). This confused people</li>
-        <br><li><a href="../files/SEP_2019_Aug_22_Events_testing.pdf" target="_blank">SEP Events Testing Results</a></li>
+        <br><li><a href="../files/SEP_2019_Aug_22_Events_testing.pdf" target="_blank">SEP Events Testing Results</a> (pdf)</li>
       </ul>
   </div>
 </div>
@@ -405,7 +404,7 @@
               <li class="issue">- People want guidance on how to frame their qurstion or message</li>
 
               <br>
-              <li><a href="../files/SEP_2019_Sep_EnquiryFormTestingV5b.pdf" target="_blank">Enquiry Form testing</a></li>
+              <li><a href="../files/SEP_2019_Sep_EnquiryFormTestingV5b.pdf" target="_blank">Enquiry Form testing</a> (pdf)</li>
             </ul>
         </div>
       </div>
@@ -436,7 +435,7 @@
               <li>- Short Forms are OK. Long Forms lead to people just phoning instead</li>
               <li>- The options displayed got generically favourable responses</li>
               <br>
-              <li><a href="../files/SEP_2019_Sep_Contect_us_when_you_dont_find_anything_Testing.pdf" target="_blank">Feedback option testing for Null Results pages</a></li>
+              <li><a href="../files/SEP_2019_Sep_Contect_us_when_you_dont_find_anything_Testing.pdf" target="_blank">Feedback option testing for Null Results pages</a> (pdf)</li>
             </ul>
         </div>
       </div>
@@ -576,7 +575,7 @@
         <li class="issue">- White text on top of image is still not ideal</li>
         <li>- ps. They are not really that bothered about the grey footer, even though it looks a bit dull</li>
         <br>
-        <li><a href="../files/SEP2019_oct_17_Images.pdf" target="_blank">SEP Homepage Image testing results</a></li>
+        <li><a href="../files/SEP2019_oct_17_Images.pdf" target="_blank">SEP Homepage Image testing results</a> (pdf)</li>
       </ul>
   </div>
 </div>
@@ -604,7 +603,7 @@
         <li>- Shorter is better</li>
         <li>- Covers a lot</li>
         <br>
-        <li><a href="../files/SEP_2019_Oct_Images-InterfaceContent-Categories_Research.pdf" target="_blank">INTERFACE content & Image testing</a></li>
+        <li><a href="../files/SEP_2019_Oct_Images-InterfaceContent-Categories_Research.pdf" target="_blank">INTERFACE content & Image testing</a> (pdf)</li>
       </ul>
   </div>
 </div>
@@ -631,7 +630,7 @@
         <li>- SUGGESTION: Add a category for STAGE OF BUSINESS (Start Up, Growth, Exporting etc...)</li>
         <li>- Issues around default distance which is now being taken up in ongoing research</li>
         <br>
-        <li><a href="../files/SEP_2019_Oct_25_Event_Category.pdf" target="_blank">Event Category Testing results</a></li>
+        <li><a href="../files/SEP_2019_Oct_25_Event_Category.pdf" target="_blank">Event Category Testing results</a> (pdf)</li>
       </ul>
   </div>
 </div>
@@ -666,7 +665,7 @@
         <li class="issue">- Issue: The grey footer was modestly criticised, (only on the homepage), but only in the absence of anything serious to point out</li>
         <li class="issue">- Issue: No method for reusing the address/company search after initial use.</li>
         <br>
-        <li><a href="../files/SEP_2019_Oct_29_CustomerUAT.pdf" target="_blank">Oct 28th 2019 Findings Report</a></li>
+        <li><a href="../files/SEP_2019_Oct_29_CustomerUAT.pdf" target="_blank">Oct 28th 2019 Findings Report</a> (pdf)</li>
       </ul>
   </div>
 </div>
@@ -698,7 +697,7 @@
         <li class="issue">- Issue: No method for reusing the address/company search after initial use.</li>
 
         <br>
-        <li><a href="../files/SEP_2019_Oct_30_Feedback_Paras_Research.pdf" target="_blank">Feedback on Content for Emails AND SEP UAT</a></li>
+        <li><a href="../files/SEP_2019_Oct_30_Feedback_Paras_Research.pdf" target="_blank">Feedback on Content for Emails AND SEP UAT</a> (pdf)</li>
       </ul>
   </div>
 </div>
@@ -727,7 +726,7 @@
         <li>- The site was so clean that it did not raise any Cognitive Issue Specific problems apart from  inor content alterations that could be made. These centered around "Giving the reasons behind strong statements made on pages". This could be shortened to "Tell me why..."  </li>
 
         <br>
-        <li><a href="../files/SEP_2019_nov_1_CognitiveA11Y.pdf" target="_blank">Findings Report Nov 1st</a></li>
+        <li><a href="../files/SEP_2019_nov_1_CognitiveA11Y.pdf" target="_blank">Findings Report Nov 1st</a> (pdf)</li>
 
       </ul>
   </div>
