SK fix dash in comment

--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5"> <!-- so that media queries work->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5"> <!-- so that media queries work-->
   <title>SEP Beta Research Timeline</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
