DO - @import Roboto

--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
       <link rel="stylesheet" href="css/SEPtimeline.css?ver=2">
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+  </style>
 </head>
 
 <body>
