--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -283,7 +283,7 @@
                 <li><strong>Decision to use Umbraco for service content management</strong></li>
                 <br>
                 <li><a href="../files/SEP-Partner-Portal-User-needs-draft.xlsx" target="_blank"> Refined prioritised needs for the service content management</a> (Excel file)</li>
-                <li><a href="../files/Enquiry Handling - high level story map (to be used on Wednesday 2808 ).pdf" target="_blank"> Initial storymap for enquiry handling</a> (pdf)</li>
+                <li><a href="../files/Enquiry_Handling-high_level_story_map.pdf" target="_blank"> Initial storymap for enquiry handling</a> (pdf)</li>
             </ul>
         </div>
       </div>
