--- a/webpages/SEPtimeline.html
+++ b/webpages/SEPtimeline.html
@@ -747,48 +747,48 @@
   <div class="body">
 <p><strong>Scot Export Event</strong></p>
 <ul>
-<li>Nov 12th 2019 at the Glasgow Technology Innovation Centre</li>
+<li>- Nov 12th 2019 at the Glasgow Technology Innovation Centre</li>
 </ul>
-
+<br>
 <p><strong>Audience</strong></p>
 <ul>
-<li>Circa 800 Exporters or people looking to export</li>
+<li>- Circa 800 Exporters or people looking to export</li>
 </ul>
-
+<br>
 <p><strong>We were focusing on</strong></p>
 <ul>
-<li>Testing Feedback emails (ratings and surveys)</li>
-<li>Testing options to improve the jump from our site to external events providers sites (usually partners)</li>
-<li>Preferences around complaints</li>
-<li>Researching assisted digital experiences and preferences</li>
+<li>- Testing Feedback emails (ratings and surveys)</li>
+<li>- Testing options to improve the jump from our site to external events providers sites (usually partners)</li>
+<li>- Preferences around complaints</li>
+<li>- Researching assisted digital experiences and preferences</li>
 </ul>
-
+<br>
 <p><strong>What we discovered about the Event Links</strong></p>
 <ul>
-<li class="issue">People preferred the text “This link opens a different website in a new tab” over “This link opens in a new tab”</li>
-<li class="issue">People prefer the text ABOVE the link button (they say it flows better)</li>
-<li>The shorter text prototype had no whitespace in between it and the text above which may have reduced it’s popularity</li>
-<li>Quote “The text above is clearer to understand”</li>
-<li>Quote “The text above the button tells you what it is going to do before it does”</li>
+<li class="issue">- People preferred the text “This link opens a different website in a new tab” over “This link opens in a new tab”</li>
+<li class="issue">- People prefer the text ABOVE the link button (they say it flows better)</li>
+<li>- The shorter text prototype had no whitespace in between it and the text above which may have reduced it’s popularity</li>
+<li>- Quote “The text above is clearer to understand”</li>
+<li>- Quote “The text above the button tells you what it is going to do before it does”</li>
 </ul>
-
+<br>
 <p><strong>What we discovered about the feedback/rating emails</strong></p>
 <ul>
-<li>The emails have too much text and people just wouldn’t read it</li>
-<li>If people were happy or angry about FindBusinessSupport help received then they would just click on the rating scale and not bother about the text.</li>
+<li>- The emails have too much text and people just wouldn’t read it</li>
+<li>- If people were happy or angry about FindBusinessSupport help received then they would just click on the rating scale and not bother about the text.</li>
 </ul>
-
+<br>
 <p><strong>What we learned about complaints</strong></p>
 <ul>
-<li>Most people said they would complain by phone BECAUSE it would be dealt with quickly an it would be a HUMAN interaction that would avoid sending emails back and forth</li>
-<li>Some said they would complain via any known contact that they had with us</li>
+<li>- Most people said they would complain by phone BECAUSE it would be dealt with quickly an it would be a HUMAN interaction that would avoid sending emails back and forth</li>
+<li>- Some said they would complain via any known contact that they had with us</li>
 </ul>
-
+<br>
 <p><strong>What we discovered in general</strong></p>
 <ul>
-<li>Not as much chat around Brexit as in previous events</li>
-<li>Lots of people are aware of SDI and have had dealings with them</li>
-<li>Many (but fewer than for SDI) have heard of Globalscot and some have had dealings</li>
+<li>- Not as much chat around Brexit as in previous events</li>
+<li>- Lots of people are aware of SDI and have had dealings with them</li>
+<li>- Many (but fewer than for SDI) have heard of Globalscot and some have had dealings</li>
 </ul>
 
   </div>
